Fix several issues with the header overlap setting

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -16,7 +16,7 @@
 			text-align: left;
 			top: 20px;
 			transform: scale(0.95);
-			transition: all 0.15s ease-in;
+			transition: all .15s ease-in;
 			transform-origin: center top;
 			visibility: hidden;
 			z-index: 99999;
@@ -34,7 +34,8 @@
 				
 				a {
 					background: $color__navigation-drop-down-background;
-	    			border-bottom: 1px solid $color__navigation-drop-down-divider;
+	    			border-bottom: 1px solid;
+	    			border-color: $color__navigation-drop-down-divider; 
 	    			color: $color__navigation-drop-down-link;
 	    			font-size: 12px;
 	    			font-weight: normal; 
@@ -93,13 +94,9 @@
 				display: block;
 				font-weight: bold; 
 				letter-spacing: 1px;
-				padding-bottom: 4px; 
-
-				.overlap-light & {
-					color: #fff; 
-				}					
+				padding-bottom: 4px;
 			}
-		}
+		}			
 
 		// If a class of 'left' is added to a menu item, break drop down menu items to the left.
 		.left {
@@ -148,7 +145,7 @@
 		}	
 
 		// If a class of .menu-button is added to a menu item, style it as a button.
-		.menu-button {
+		@at-root #site-navigation#{&} .menu-button {
 			margin-bottom: 0;
 			padding-bottom: 0;
 
@@ -165,6 +162,7 @@
 			
 				&:hover {
 					background: rgba($color__accent, .8);
+					border: none; 
 					color: #fff;
 				}	
 			}		
@@ -174,13 +172,18 @@
 	// First level items.
 	div > ul > li {
 
-		&:hover > a {
-			border-color: $color__navigation_link_accent;
+		// Page Settings: Overlap with colors.
+		.overlap-light & > a {
+			color: #fff; 
 		}
 
-		&.menu-item-has-children:hover > a,
-		&.page_item_has_children:hover > a {
-			border-color: $color__header-background;
+		.overlap-dark & > a {
+			color: #2d2d2d; 
+		}		
+
+		&:hover > a {
+			border-bottom: 2px solid; 
+			border-color: $color__navigation_link_accent;
 		}
 
 		&.current a,
@@ -214,7 +217,11 @@
 					
 					.overlap-light & {
 						fill: #fff; 
-					}						
+					}
+
+					.overlap-dark & {
+						fill: #2d2d2d;
+					}					
 				}
 			}
 		}
